# bls12-381

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yaml
include/bls12-381/: arithmetic.hpp
src/: arithmetic.cpp  arithmetic_aarch64.S  signatures.cpp
test/: CMakeLists.txt  adversarial_tests.cpp
